--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "mixme": "^0.3.5"
+    "mixme": "^0.3.5",
+    "mongodb": "^3.5.6",
+    "mongoose": "^5.9.10"
   },
   "devDependencies": {
     "assert": "^2.0.0",
